[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nostpy-gui"
version = "0.1.9"  ## Version bumped
description = "A relay management client"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Brian Hartford", email = "bh419@protonmail.com"}
]
requires-python = ">=3.7"
dependencies = [
    "asyncio",
    "secp256k1",
    "websockets",
]

[project.urls]
repository = "https://github.com/UTXOnly/nostpy-gui"

[project.scripts]
nostpy-gui = "nostpy_gui.main:main"
